--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,15 @@
     "require-dev": {
         "phpunit/phpunit": "^5.7",
         "mockery/mockery": "^0.9",
-        "squizlabs/php_codesniffer": "^2.0",
         "satooshi/php-coveralls": "^1.0",
         "phpunit/php-code-coverage": "^4.0",
-        "scrutinizer/ocular": "^1.3",
-        "phpro/grumphp": "^0.11"
+        "phpro/grumphp": "^0.12",
+        "squizlabs/php_codesniffer": "^3.0",
+        "scrutinizer/ocular": "^1.4",
+        "phpmd/phpmd": "^2.6",
+        "sebastian/phpcpd": "^3.0",
+        "sensiolabs/security-checker": "^4.1",
+        "friendsofphp/php-cs-fixer": "^2.7"
     },
     "scripts": {
         "phpcs": "./vendor/bin/phpcs --standard=PSR2 --ignore=vendor .",
