--- a/grumphp.yml.dist
+++ b/grumphp.yml.dist
@@ -1,4 +1,28 @@
 parameters:
-    git_dir: .
-    bin_dir: vendor/bin
-    tasks: {  }
+  git_dir: .
+  bin_dir: vendor/bin
+  tasks:
+    phpcsfixer:
+      config_file: ~
+      config: ~
+      fixers: []
+      level: ~
+      verbose: true
+    phpcs:
+      standard: PSR2
+      ignore_patterns:
+        - vendor/
+        - demo/
+        - spec/
+      triggered_by:
+        - php
+        - module
+        - inc
+        - js
+    securitychecker:
+        lockfile: ./composer.lock
+        format: ~
+        end_point: ~
+        timeout: ~
+        run_always: false
+
