--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,18 @@
 {
     "name": "drupol/phpartition",
-    "description": "Partition problem for balanced arrays splitting made easy.",
     "type": "library",
+    "description": "Partition problem for balanced arrays splitting made easy.",
+    "keywords": [
+        "math",
+        "numbers",
+        "statistics",
+        "partition",
+        "greedy",
+        "karmarkar",
+        "karp"
+    ],
     "homepage": "https://github.com/drupol/phpartition",
-    "keywords": ["math", "numbers", "statistics", "partition", "greedy", "karmarkar", "karp"],
-    "license": "GPL-2.0+",
-    "support": {
-        "issues": "https://github.com/drupol/phpartition/issues",
-        "source": "https://github.com/drupol/phpartition"
-    },
-    "minimum-stability": "stable",
+    "license": "MIT",
     "authors": [
         {
             "name": "Pol Dellaiera",
@@ -17,32 +20,28 @@
             "role": "Author"
         }
     ],
-    "require": {
-        "oefenweb/statistics": "^1.1",
-        "drupol/phpermutations": "^1.2",
-        "phootwork/collection": "^1.4"
-    },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
-        "mockery/mockery": "^0.9",
-        "squizlabs/php_codesniffer": "^2.0",
-        "satooshi/php-coveralls": "^1.0",
-        "phpunit/php-code-coverage": "^4.0",
-        "scrutinizer/ocular": "^1.3",
-        "phpro/grumphp": "^0.11"
-    },
-    "scripts": {
-        "phpcs": "./vendor/bin/phpcs --standard=PSR2 --ignore=vendor .",
-        "phpcbf": "./vendor/bin/phpcbf --standard=PSR2 --ignore=vendor .",
-        "phpunit": "./vendor/bin/phpunit --coverage-clover build/logs/clover.xml -c tests/phpunit.xml tests",
-        "grumphp": "./vendor/bin/grumphp run",
-        "coveralls": "./vendor/bin/coveralls",
-        "scrutinizer": "./vendor/bin/ocular code-coverage:upload --format=php-clover build/logs/clover.xml"
+        "codeception/codeception": "^3",
+        "drupol/php-conventions": "^1.3",
+        "drupol/phpermutations": "^1.3"
     },
     "autoload": {
         "psr-4": {
-            "drupol\\phpartition\\": "src/",
-            "drupol\\phpartition\\Tests\\": "tests/src/"
+            "drupol\\phpartition\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "drupol\\phpartition\\tests\\": "tests/"
+        }
+    },
+    "scripts": {
+        "codecept": "./vendor/bin/codecept run",
+        "codecept-coverage": "./vendor/bin/codecept run --coverage --coverage-xml --env travis",
+        "grumphp": "./vendor/bin/grumphp run"
+    },
+    "support": {
+        "issues": "https://github.com/drupol/phpartition/issues",
+        "source": "https://github.com/drupol/phpartition"
     }
 }
