--- a/.travis.yml
+++ b/.travis.yml
@@ -9,15 +9,17 @@ cache:
     - $HOME/.composer/cache
 
 php:
-  - 5.6
   - 7.1
+  - 7.2
+  - 7.3
 
 install:
   - composer install
 
 script:
   - composer grumphp
-  - composer phpunit
+  - composer codecept-coverage
 
 after_success:
-  - composer scrutinizer
+  - phpenv config-rm xdebug.ini
+  - bash <(curl -s https://codecov.io/bash) -f tests/_output/coverage.xml
