--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,12 @@
             "role": "Author"
         }
     ],
+    "require": {
+        "php": ">= 7.1.3"
+    },
     "require-dev": {
         "codeception/codeception": "^3",
-        "drupol/php-conventions": "^1.3",
+        "drupol/php-conventions": "^1.5",
         "drupol/phpermutations": "^1.3"
     },
     "autoload": {
